Update page gioi-thieu

--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -9,5 +9,7 @@
     <h1>Trang Giới Thiệu</h1>
 
     <p>Mô tả trang giới thiệu</p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque quibusdam ullam, sequi illum exercitationem, hic libero, aliquam esse quas veniam optio eligendi mollitia. Voluptate possimus tenetur ipsam alias voluptatem officia.</p>
 </body>
 </html>
