--- a/dang-ky.html
+++ b/dang-ky.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Trang Đăng Ký</h1>
+
+    <form action="">
+        <input type="email" name="email" id="">
+        <input type="password" name="password" id="">
+        <button>Đăng Ký</button>
+    </form>
 </body>
 </html>
