--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -11,5 +11,7 @@
     <p>Mô tả trang giới thiệu</p>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque quibusdam ullam, sequi illum exercitationem, hic libero, aliquam esse quas veniam optio eligendi mollitia. Voluptate possimus tenetur ipsam alias voluptatem officia.</p>
+
+    <p>Xin chào MaiKa....</p>
 </body>
 </html>
